<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.magpie.app.EmailActivity">

    <EditText
        android:id="@+id/e_address_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/subject_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/e_address_editTxt"
        android:hint="@string/subject" />

    <EditText
        android:id="@+id/message_editTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/send_button"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/subject_editTxt"
        android:hint="@string/entermessage" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/attachment_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:text="@string/Send" />

    <Button
        android:id="@+id/attachment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        android:text="@string/attachment" />
</RelativeLayout>
